# source-list

./: CMakeLists.txt  meson.build
data/: com.github.danrabbit.source-list.desktop
src/: IconView.vala  Sidebar.vala  SidebarExpandableRow.vala  SidebarHeader.vala  SidebarRow.vala  SourceList.vala  main.vala
